# little-expert-system

./: ..gitignore.un~  .conanfile.txt.un~  .gitignore  CMakeLists.txt  CMakePresets.json  LESRun.cpp  LittleExpertSystem.cpp  LittleExpertSystem.h  MKBParser.cpp  Parser.h  conanfile.txt  pom.xml  vcpkg.json
api/: pom.xml
api/src/main/java/ru/danilakondr/les/: LittleExpertSystem.java  LocalizedMessages.java  OriginalMessages.java
api/src/main/java/ru/danilakondr/les/expert/: LittleExpertSystem.java  Protocol.java
api/src/main/java/ru/danilakondr/les/knowbase/: Hypothesis.java  InvalidQuestionReferenceException.java  KBFormat.java  KBFormatAnalyzer.java  KnowledgeBase.java  KnowledgeBaseReader.java  ProbabilityPair.java
api/src/main/java/ru/danilakondr/les/mkb/: MKBParser.java  MKBSyntaxError.java
api/src/main/java/ru/danilakondr/les/parser/: InvalidQuestionReferenceException.java  KBFormat.java  KBFormatAnalyzer.java  KnowledgeBaseReader.java  MKBParser.java  MKBSyntaxError.java
api/src/main/resources/: LesStrings.properties  LesStrings_ru_RU.properties
api/src/test/java/ru/danilakondr/les/: JSONKBTest.java  MKBParserTest.java  ResourceBundleTest.java
cli/: pom.xml
cli/src/main/java/ru/danilakondr/les/cli/: App.java
gui/: pom.xml
gui/src/main/java/ru/danilakondr/les/gui/: App.java  ExpertSystemForm.form  ExpertSystemForm.java  package-info.java
lesrun/: CMakeLists.txt  LESRun.cpp
lib/: CMakeLists.txt
lib/include/libles/: expert.h
lib/src/: CApi.cpp  ConsultationSteps.h  LittleExpertSystem.cpp  LittleExpertSystem.h  MKBParser.cpp  Parser.h
src/main/java/ru/danilakondr/les/: App.java  LittleExpertSystem.java
src/main/java/ru/danilakondr/les/knowbase/: Hypothesis.java  KnowledgeBase.java  ProbabilityPair.java
src/main/java/ru/danilakondr/les/parser/: InvalidQuestionReferenceException.java  KnowledgeBaseFileFormat.java  KnowledgeBaseFileFormatDeterminer.java  MKBFileFormat.java  MKBFormatDeterminer.java  MKBParser.java
src/test/java/ru/danilakondr/les/: AppTest.java
